feat: add docs file of products views table
